Implement limit(long)